WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82943
Web Inspector: inspector/debugger. 19 tests hitting assertion in PageScriptDebugServer::didPause()
https://bugs.webkit.org/show_bug.cgi?id=82943
Summary
Web Inspector: inspector/debugger. 19 tests hitting assertion in PageScriptDe...
Enrica Casucci
Reported
2012-04-02 13:42:46 PDT
inspector/debugger/copy-stack-trace.html inspector/debugger/callstack-placards-discarded.html I'm attaching the crash log.
Attachments
Crash log
(43.88 KB, text/plain)
2012-04-02 13:44 PDT
,
Enrica Casucci
no flags
Details
Proposed Change
(1.78 KB, patch)
2012-04-09 11:13 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2012-04-02 13:44:01 PDT
Created
attachment 135173
[details]
Crash log
Yury Semikhatsky
Comment 2
2012-04-02 23:44:59 PDT
Timothy, could you take a look at this one? It must have appeared after
http://trac.webkit.org/changeset/112818
Timothy Hatcher
Comment 3
2012-04-09 10:25:44 PDT
***
Bug 83480
has been marked as a duplicate of this bug. ***
Timothy Hatcher
Comment 4
2012-04-09 11:13:37 PDT
Created
attachment 136270
[details]
Proposed Change
WebKit Review Bot
Comment 5
2012-04-09 15:14:21 PDT
Comment on
attachment 136270
[details]
Proposed Change Clearing flags on attachment: 136270 Committed
r113631
: <
http://trac.webkit.org/changeset/113631
>
WebKit Review Bot
Comment 6
2012-04-09 15:14:26 PDT
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 7
2013-05-22 17:33:53 PDT
It seems like we forgot to delete test expectations. Deleting it now.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug