Fix the assertion in PageScriptDebugServer::didPause.

https://webkit.org/b/82943

Reviewed by Simon Fraser.

* bindings/js/PageScriptDebugServer.cpp:
(WebCore::PageScriptDebugServer::PageScriptDebugServer): Initialize m_pausedPage
to zero so the assert in didPause will not randomly fire the first time.


Canonical link: https://commits.webkit.org/100941@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113631 268f45cc-cd09-0410-ab3c-d52691b4dbfc